src/test/deca/context/valid/Objet/selection_class1.deca
// Description:
//    test de sélection sans méthode
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int i ;
}

{
    A a = new A();
    a.i = 1 ;
}