src/test/deca/context/invalid/Objet/same_param_repeted1.deca
// Description:
//    test de faire répéter le même paramètre deux fois dans une méthode 
//
// Resultats:
//  12:12: Arguments in a function must be different 
//
// Historique:
//    cree le 20/01/2022

class A  {
    int i ;
    int get(int i , int i){}
    
}


{}



